@@ -58,10 +58,10 @@ public class ConfigurationPropertiesRebinderProxyIntegrationTests {
 	public void testAppendProperties() {
 		// This comes out as a String not Integer if the rebinder processes the proxy
 		// instead of the target
-		then(this.properties.getExpiry().get("one")).isEqualTo(new Integer(168));
+		then(this.properties.getExpiry().get("one")).isEqualTo(Integer.valueOf(168));
 		TestPropertyValues.of("messages.expiry.one=56").applyTo(this.environment);
 		this.rebinder.rebind();
-		then(this.properties.getExpiry().get("one")).isEqualTo(new Integer(56));
+		then(this.properties.getExpiry().get("one")).isEqualTo(Integer.valueOf(56));
 	}
 
 	@Configuration(proxyBeanMethods = false)
